errors.log
2025-08-06 12:23:51 ERROR Internal Server Error: /news/news/ C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\log.py
None
Traceback (most recent call last):
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\response.py", line 92, in rendered_content
    return template.render(context, self._request)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\backends\django.py", line 107, in render
    return self.template.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 171, in render
    return self._render(context)
           ~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 163, in _render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 1016, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 977, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader_tags.py", line 134, in render
    compiled_parent = self.get_parent(context)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader_tags.py", line 131, in get_parent
    return self.find_template(parent, context)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader_tags.py", line 109, in find_template
    template, origin = context.template.engine.find_template(
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        template_name,
        ^^^^^^^^^^^^^^
        skip=history,
        ^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\templatetags\i18n.py", line 402, in do_translate
    raise TemplateSyntaxError("'%s' takes at least one argument" % bits[0])
django.template.exceptions.TemplateSyntaxError: 'trans' takes at least one argument
2025-08-06 12:23:51 ERROR "GET /news/news/ HTTP/1.1" 500 180574 C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\servers\basehttp.py
None
